--- a/stylesheets/standard.css
+++ b/stylesheets/standard.css
@@ -226,7 +226,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-transparent,.w3-hover-none:hover{background-color:transparent!important}
 .w3-hover-none:hover{box-shadow:none!important}
 /* Colors */
-.w3-main,.w3-hover-main:hover{color:#000!important;background-color:#FFF1E5!important}
+.w3-theme,.w3-hover-theme:hover{color:#000!important;background-color:#FFF1E5!important}
 .w3-amber,.w3-hover-amber:hover{color:#000!important;background-color:#ffc107!important}
 .w3-aqua,.w3-hover-aqua:hover{color:#000!important;background-color:#00ffff!important}
 .w3-blue,.w3-hover-blue:hover{color:#fff!important;background-color:#2196F3!important}
