--- a/stylesheets/standard.css
+++ b/stylesheets/standard.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Arial', sans-serif; /* Default font */
     line-height: 1.6; /* Line height for readability */
     color: #333; /* Text color */
-    background-color: #FFF1E5; /* Background color */
+    background-color: #FFF1E5; /* Background color */#
     padding: 20px; /* Default padding */
 }
 
